<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/thunder_search"
        android:title="@string/mn_thunder_search"
        android:icon="@drawable/ic_thunder_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/bookmark"
        android:title="@string/mn_bookmark"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/exit"
        android:title="@string/mn_exit"
        android:icon="@drawable/ic_exit"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView" />
</menu>