<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvItem"
    android:layout_width="match_parent"
    android:layout_height="80dp"
android:layout_marginBottom="@dimen/dimen_8"
    android:backgroundTint="@color/white_5"
    app:cardCornerRadius="@dimen/margin_12" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8" >

        <TextView
            android:id="@+id/tv_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_4"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_model_car_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_car_model" />

        <TextView
            android:id="@+id/tv_year_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_4"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_calendar_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_car_model"
            tools:text="@string/tv_year_model" />

        <TextView
            android:id="@+id/tv_fuel_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_4"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_fuel_type_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_year_model"
            tools:text="@string/tv_fuel_type" />

        <TextView
            android:id="@+id/tv_car_manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24"
            android:drawablePadding="@dimen/dimen_4"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_car_manufacturer_20"
            app:layout_constraintBottom_toBottomOf="@+id/tv_year_model"
            app:layout_constraintStart_toEndOf="@+id/tv_year_model"
            app:layout_constraintTop_toTopOf="@+id/tv_year_model"
            tools:text="@string/tv_car_manufacturer" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/orange"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_price"
            app:layout_constraintBottom_toBottomOf="@+id/tv_fuel_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bookmark"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/tv_price" />

        <ImageButton
            android:id="@+id/tv_search_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_model_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/ib_binocular" />

        <ImageButton
            android:id="@+id/tv_bookmark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/dimen_8"
            android:contentDescription="@string/ib_binocular"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintEnd_toStartOf="@+id/tv_search_photo"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout >
</androidx.cardview.widget.CardView >